--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,5 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="10dp">
+
+
+    <TextView
+        android:id="@+id/tv_name_station"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="sdfasf"
+        android:textSize="25sp"
+        android:textColor="@color/blackText"/>
+
+    <TextView
+        android:id="@+id/tv_country_station"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="sdfsf"
+        android:textSize="15sp"
+        android:layout_below="@+id/tv_name_station"
+        android:textColor="@color/blackText"/>
+
+    <TextView
+        android:id="@+id/tv_city_title_station"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:text="adsfafd"
+        android:textColor="@color/blackText"
+        android:layout_below="@id/tv_country_station"/>
 
 </RelativeLayout>
