clean code and work with aboutappactivity

--- a/app/src/main/res/layout/fragment_about_app.xml
+++ b/app/src/main/res/layout/fragment_about_app.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,8 +7,21 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/tv_version"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/blackText"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
+        android:textSize="20sp"
+        android:text="Версия приложения: " />
 
-</FrameLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_version"
+        android:textColor="@color/blackText"
+        android:textSize="20sp"
+        android:layout_alignLeft="@+id/tv_version"
+        android:text="Копирайт: Apache"/>
+
+</RelativeLayout>
