--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -35,6 +35,7 @@
         android:text="text"
         android:visibility="gone"
         android:layout_marginLeft="5dp"
+        android:textColor="@color/blackText"
         android:layout_below="@id/btn_choose_station_from"/>
 
     <TextView
@@ -43,7 +44,8 @@
         android:layout_height="wrap_content"
         android:text="text"
         android:visibility="gone"
-        android:layout_alignLeft="@+id/tv_station_from"
+        android:textColor="@color/blackText"
+        android:layout_marginLeft="5dp"
         android:layout_below="@id/btn_choose_station_in"/>
 
     <TextView
@@ -52,7 +54,8 @@
         android:layout_height="wrap_content"
         android:text="text"
         android:visibility="gone"
-        android:layout_alignLeft="@+id/tv_station_from"
+        android:textColor="@color/blackText"
+        android:layout_marginLeft="5dp"
         android:layout_below="@id/btn_choose_date"/>
 
 </RelativeLayout>
