--- a/app/src/main/res/layout/nav_header_menu.xml
+++ b/app/src/main/res/layout/nav_header_menu.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Station"
+        android:textSize="25sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 
